Feed with followed & discovery mode when logge in
